--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ node_js:
   - 10
 install:
   - npm i
-  - npm i codecov
+#  - npm i codecov
 after_success:
-  - npm run coverage && npx codecov
+#  - npm run coverage && npx codecov
   - mkdir dist
   - cp -R src/index.html src/js dist
 deploy:
