--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "browser-sync start -s \"src\" -f \".\"",
-    "test": "jest",
-    "coverage": "jest --coverage"
+    "serve": "browser-sync start -s \"src\" -f \".\""
   },
   "babel": {
     "presets": [
