--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 after_success:
 #  - npm run coverage && npx codecov
   - mkdir dist
-  - cp -R src/index.html src/empty.html src/donat.html src/newTest.html src/oilTest.html src/js dist
+  - cp -R src/index.html src/empty.html src/donat.html src/newTest.html src/oilTest.html src/donat.css src/js dist
 deploy:
   provider: pages
   skip_cleanup: true
